@@ -3,6 +3,7 @@
 - Update to LWJGL 3.2.3
 - API Change: Table#getRow now returns -1 when over the table but not over a row (used to return the last row).
 - API Change: Tree#addToTree and #removeFromTree now have an "int actorIndex" parameter.
+- API Change: Ray#set(float x, float y, float z, float dx, float dy, float dz) normalize direction vector after set.
 
 [1.9.10]
 - API Addition: Allow target display for maximization LWJGL3 backend
